testsuite/tests/builtins/str_methods/find/non_str_or_pattern_to_find/test.out
Error: Invalid argument type
   ╭─[ <working-dir>/script.lkql:2:1 ]
   │
 2 │ s.find(42)
   │ ─────┬────  
   │      ╰────── Expecting a "Str" or a "Pattern" for the parameter "to_find", got a "Int"
───╯
